--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@
 	top: 0px;
 	padding: 30px 0px 50px 0px;
 	background: white;
+	color: #333638;
 	border-radius: 0px 0px 15px 15px;
 	filter: drop-shadow(0 0 0.75rem rgba(0,0,0,0.1));
 }
